/cp 2013-11-03  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/38313
	* parser.c (cp_parser_constructor_declarator_p): Check that the
	class-name matches current_class_type.

/testsuite
2013-11-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/38313
	* g++.dg/lookup/name-clash10.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@204339 138bc75d-0d04-0410-961f-82ee72b054a4